--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@ src="https://www.facebook.com/tr?id=2326808157784991&ev=PageView&noscript=1"
    <div class="container">
          <h2>Welcome to our official Telegram channel</h2>
         <p>Be part of our fast-growing Telegram family — free updates and valuable content.</p>
-        <a class="button" href="https://telegram.me/+4JdUycm-MGU5ZTll">Join Telegram Now</a><br>
+        <a class="button" href="https://telegram.me/+HM2Ep57A8Io1ZGI1">Join Telegram Now</a><br>
         <img src="images.jpg">      
-        <p>Ads Setup By <a href="https://telegram.me/+GYgJmKWI8AhiNzVl"> @manish</a></p>     
+        <p>Ads Setup By <a href="https://telegram.me/+s86JNtEeB-JkMTE1"> @AVION</a></p>     
     </div>
 
 </body>
 </html>
+
 
 
 
