--- a/index.html
+++ b/index.html
@@ -65,18 +65,14 @@ p{
     width:100%;
     padding:14px;
     border-radius:8px;
-    background:#dcdcdc;
-    color:#777;
+    background:#0088CC;
+    color:#000;
     font-size:16px;
     font-weight:bold;
     border:none;
     cursor:not-allowed;
 }
-.button.active{
-    background:#0088cc;
-    color:#fff;
-    cursor:pointer;
-}
+
 img{
     width:180px;
     border-radius:10px;
@@ -112,7 +108,7 @@ img{
 
     <!-- ✅ BUTTON WITH 5s DELAY -->
     <button id="joinBtn" class="button">
-        Please wait 3s
+         <a href="https://telegram.me/+mm2ujn7pbhY4MjZl">Join Telegram Now</a>
     </button>
 
     <img src="images.jpg" alt="Telegram Community">
@@ -123,29 +119,8 @@ img{
     </p>
 </div>
 
-<script>
-const btn = document.getElementById("joinBtn");
-let time = 3;
-
-const countdown = setInterval(() => {
-    time--;
-    btn.innerText = "Please wait" + time + "s";
-
-    if (time <= 0) {
-        clearInterval(countdown);
-        btn.classList.add("active");
-        btn.innerText = "Join Telegram Now";
-    }
-}, 1000);
-
-btn.addEventListener("click", () => {
-    if (btn.classList.contains("active")) {
-        window.location.href = "https://telegram.me/+mm2ujn7pbhY4MjZl";
-    }
-});
-</script>
-
 </body>
 </html>
+
 
 
