--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@ p{
     padding:14px;
     border-radius:8px;
     background:#0088CC;
-    color:#000;
     font-size:16px;
     font-weight:bold;
     border:none;
@@ -85,6 +84,11 @@ img{
 }
 .footer a{
     color:#0088cc;
+    text-decoration:none;
+    font-weight:bold;
+}
+    a{
+    color:#FFF;
     text-decoration:none;
     font-weight:bold;
 }
@@ -121,6 +125,7 @@ img{
 
 </body>
 </html>
+
 
 
 
