--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ img{
     </p>
 
     <!-- ✅ BUTTON WITH 5s DELAY -->
-    <button id="joinBtn" class="button">
-         <a href="https://telegram.me/+mm2ujn7pbhY4MjZl">Join Telegram Now</a>
-    </button>
+    
+         <a class="button" href="https://telegram.me/+mm2ujn7pbhY4MjZl">Join Telegram Now</a>
+    
 
     <img src="images.jpg" alt="Telegram Community">
 
@@ -125,6 +125,7 @@ img{
 
 </body>
 </html>
+
 
 
 
