--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ p{
 .button{
     display:block;
     width:100%;
-    padding:14px;
+    padding:14px 10px;
     border-radius:8px;
     background:#0088CC;
     font-size:16px;
@@ -124,6 +124,7 @@ img{
 
 </body>
 </html>
+
 
 
 
