--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ p{
 }
 .button{
     display:block;
-    width:100%;
-    padding:14px 10px;
+    width:94%;
+    padding:14px;
     border-radius:8px;
     background:#0088CC;
     font-size:16px;
@@ -124,6 +124,7 @@ img{
 
 </body>
 </html>
+
 
 
 
